# creating-an-open-source-project-in-python

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  coverage.xml  logging.conf  openapi.json  pyproject.toml  pytest.ini  reminder.py  setupenv.sh  test_reminder.py  tox.ini
.github/workflows/: check.yml
after/: .coverage  coverage.xml  tox.ini
after/.github/workflows/: check.yml
before/: .coverage  coverage.json  coverage.xml  pyproject.toml  reminder.py  reminder.py,cover  tox.ini
before/.github/workflows/: check.yml
src/: __init__.py  cli.py  fastapi.py  healthz.py  reminder.py
src/cli_server/: main.py
src/fastapi_server/: __init__.py  configuration.py  main.py
src/fastapi_server/apis/: task_api.py
src/fastapi_server/models/: task.py
src/main/: cli.py  fastapi.py  reminder.py
src/models/: task.py  task_model.py
src/tests/: test_reminder.py
tests/: test_reminder.py
tests/cli_server/: test_cli.py
tests/models/: test_task.py  test_task_model.py
