[tool.poetry]
name = "reminder"
version = "0.1.0"
description = "This is my 1st Python project"
authors = ["Cheukting <cheukting.ho@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
reminder = "reminder.cli:main" # Entry point for the command line interface 

[tool.poetry.dependencies]
python = ">=3.10"
click = "^8.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
flake8 = "^7.2.0"
pre-commit = "^4.2.0"
tox = "^4.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
